overflow: scroll does fix my problem that resuled when I changed the position of the delete btn BUT not quite what I want

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@
   border: 1px solid rgba(245, 245, 244, 0.21); /*create this tile-like look*/
   padding: 15px;
   margin: 10px;
+  overflow: scroll;
 }
 
 .tile {
